# Rend

./: .gitignore  CMakeLists.txt  README.md  update_for_tester.py
LicenseSpring/: LICENSE  README  ReleaseNotes.txt
LicenseSpring/documentation/html/: _a_p_i_def_8h.html  _a_p_i_def_8h_source.html  _base_manager_8h.html  _base_manager_8h_source.html  _bundle_manager_8h.html  _bundle_manager_8h.js  _bundle_manager_8h_source.html  _c-interface_2_company_8h.html  _c-interface_2_company_8h.js  _c-interface_2_company_8h_source.html  _c-interface_2_configuration_8h.html  _c-interface_2_configuration_8h.js  _c-interface_2_configuration_8h_source.html  _c-interface_2_customer_8h.html  _c-interface_2_customer_8h_source.html  _c-interface_2_extended_options_8h.html  _c-interface_2_extended_options_8h.js  _c-interface_2_extended_options_8h_source.html  _c-interface_2_installation_file_8h.html  _c-interface_2_installation_file_8h_source.html  _c-interface_2_license_feature_8h.html  _c-interface_2_license_feature_8h_source.html  _c-interface_2_license_handler_8h.html  _c-interface_2_license_handler_8h_source.html  _c-interface_2_license_i_d_8h.html  _c-interface_2_license_i_d_8h.js  _c-interface_2_license_i_d_8h_source.html  _c-interface_2_product_details_8h.html  _c-interface_2_product_details_8h_source.html  _company_8h.html  _company_8h.js  _company_8h_source.html  _configuration_8h.html  _configuration_8h_source.html  _consumption_period_8h.html  _consumption_period_8h_source.html  _crypto_provider_8h.html  _crypto_provider_8h_source.html  _custom_field_8h.html  _custom_field_8h_source.html  (+394 more)
LicenseSpring/documentation/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_10.js  classes_2.js  classes_5.js  classes_6.js  classes_8.js  classes_a.js  classes_b.js  classes_c.js  enumvalues_4.js  files_1.js  files_2.js  files_4.js  files_6.js  files_7.js  files_8.js  files_9.js  functions_0.js  functions_1.js  (+29 more)
LicenseSpring/include/LicenseSpring/: APIDef.h  BaseManager.h  BundleManager.h  Company.h  Configuration.h  ConsumptionPeriod.h  CryptoProvider.h  CustomField.h  Customer.h  DeviceVariable.h  EncryptString.h  Exceptions.h  ExtendedOptions.h  FloatingClient.h  FloatingServerInfo.h  InstallationFile.h  License.h  LicenseFeature.h  LicenseFileStorage.h  LicenseHandler.h  LicenseID.h  LicenseManager.h  LicenseMemoryStorage.h  LicenseStorage.h  LicenseType.h  LicenseUser.h  PODTypes.h  ProductDetails.h  UserLicense.h  UserLicensesData.h  Version.h
LicenseSpring/include/LicenseSpring/C-interface/: Company.h  Configuration.h  Customer.h  ExtendedOptions.h  InstallationFile.h  LicenseFeature.h  LicenseHandler.h  LicenseID.h  ProductDetails.h
LicenseSpring/include/ykpiv/: ykpiv-config.h
LicenseSpring/samples/: AppConfig.cpp  AppConfig.h  LicenseSpringSamples.sln
LicenseSpring/samples/AirGapQtSample/: AirGapQtSample.pro  activationwindow.cpp  activationwindow.h  activationwindow.ui  deactivationdialog.cpp  deactivationdialog.h  deactivationdialog.ui  devicedatadialog.cpp  devicedatadialog.h  devicedatadialog.ui  licensewindow.cpp  licensewindow.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  productdetailsdialog.cpp  productdetailsdialog.h  productdetailsdialog.ui
LicenseSpring/samples/AndroidNDKSample/: settings.gradle.kts
LicenseSpring/samples/AndroidNDKSample/app/: build.gradle.kts
LicenseSpring/samples/AndroidNDKSample/app/src/main/: AndroidManifest.xml
LicenseSpring/samples/AndroidNDKSample/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
LicenseSpring/samples/AndroidNDKSample/gradle/wrapper/: gradle-wrapper.properties
LicenseSpring/samples/CSample/: AppConfig.c  AppConfig.h  CSample.vcxproj  KeyBasedSample.c  KeyBasedSample.h  LicenseFunctions.c  LicenseFunctions.h  UserBasedSample.c  UserBasedSample.h  main.c
LicenseSpring/samples/CppSample/: BaseSample.cpp  BaseSample.h  BundleSample.cpp  BundleSample.h  CMakeListsWindows.txt  CppSample.vcxproj  LicenseSample.cpp  LicenseSample.h  build.bat  main.cpp
LicenseSpring/samples/JUCESample/: JUCESample.jucer  copy_libs.sh
LicenseSpring/samples/JUCESample/JuceLibraryCode/: AppConfig.h  JuceHeader.h
LicenseSpring/samples/JUCESample/Source/: Main.cpp  MainComponent.cpp  MainComponent.h
LicenseSpring/samples/QtSample/: QtSample.pro  activationwindow.cpp  activationwindow.h  activationwindow.ui  devicedatadialog.cpp  devicedatadialog.h  devicedatadialog.ui  licensewindow.cpp  licensewindow.h  licensewindow.ui  mainwindow.cpp  mainwindow.ui  productdetailsdialog.cpp  productdetailsdialog.h  productdetailsdialog.ui  reconfiguredialog.cpp  reconfiguredialog.h  reconfiguredialog.ui
LicenseSpring/samples/SSOSample/: ActivationWidget.cpp  ActivationWidget.h  ActivationWidget.ui  BrowserWidget.cpp  BrowserWidget.h  BrowserWidget.ui  LicenseInfoWidget.cpp  LicenseInfoWidget.h  LicenseInfoWidget.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  Resources.qrc  SSOSample.pro  main.cpp
LicenseSpring/samples/WinSample/: README.txt
LicenseSpring/samples/WinSample/src/: WinSample.vcxproj  WinSample.vcxproj.filters  defines.h  main.cpp  resource.h  stdafx.cpp  stdafx.h
LicenseSpring/samples/WinSample/src/Resources/: WinSample.rc
LicenseSpring/samples/WinSample/src/UI/: activation_dialog.cpp  activation_dialog.h  info_dialog.cpp  info_dialog.h  product_details.cpp  product_details.h
LicenseSpring/samples/WinSample/src/Utils/: utils.cpp  utils.h
doc/: vst3-to-auv3-pita.md
resource/: BB_radio_128.knob  Dual_LED.knob  editor.uidesc  editorFINALLY.uidesc  editormovie  knob_64x64x64.knob  win32resource.rc
resource/fonts/: DIEDIEDI.ttf.b64.txt
source/: cids.h  compression.cpp  compression.h  controller.cpp  controller.h  editor.h  editordelegate.h  factory.cpp  licenser.h  processor.cpp  processor.h  validity.cpp  validity.h  version.h  view.cpp  view.h  viewfactory.cpp
(+9 files in other folders)
